--- a/notas/Fundamentos.ipynb
+++ b/notas/Fundamentos.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -18,27 +18,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "primeiro programa\n",
-      "Help on built-in function print in module builtins:\n",
-      "\n",
-      "print(...)\n",
-      "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
-      "    \n",
-      "    Prints the values to a stream, or to sys.stdout by default.\n",
-      "    Optional keyword arguments:\n",
-      "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
-      "    sep:   string inserted between values, default a space.\n",
-      "    end:   string appended after the last value, default a newline.\n",
-      "    flush: whether to forcibly flush the stream.\n",
-      "\n"
+      "primeiro programa\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print('primeiro programa')\n",
     "1 + 2\n",
-    "\n",
-    "help(print)"
+    "#help(print)"
    ]
   },
   {
